--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,4 @@
-<h1> Articles </h1>
-
-<ol>
-<% @articles.each do |article| %>
-<li> <%= "#{article.subject} - #{article.post}" %> </li>
-<% end %>
-</ol>
-
-<br><br>
-
-<p> Click <a href="/articles/new">here</a> to make a new article post.</p>
+<h1> articles </h1>
+<h2> <% @articles.collect do |x| %>
+  <%= "#{x.title}" + "-" + "#{x.content}" %><br>
+<% end %> </h2>
