Automatically backed up by Learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,5 +2,5 @@
 <h2> <%= @article.content %> </h2>
 <form method="post" action="/articles/<%=@article.id%>">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="delete" id="submit">
+  <input type="submit" name="submit" value="DELETE" id="submit">
 </form>
